[package]
name = "ublox-msg"
version = "0.1.0"
authors = ["Jay Kickliter <jay@kickliter.com>"]
edition = "2015"

[features]
default = ["std"]
std = []

[dev.'cfg(not(feature = "std"))'.dependencies]
heapless = "*"

[dependencies]
nom = "4"

[dependencies.byteorder]
version = "1"
default-features = false
