[package]
name = "ublox"
version = "0.1.4"
authors = ["Jay Kickliter <jay@kickliter.com>"]
edition = "2018"

[workspace]
members = [ "ubsniff" ]
default-members = [ "ubsniff" ]

[dependencies]
bitfield = "0.13.2"
log = "0.4.8"
nom = "4"
zerocopy = "0.3.0"

[dependencies.byteorder]
version = "1"
default-features = false
